--- a/Instance001/index.html
+++ b/Instance001/index.html
@@ -6,6 +6,9 @@
     <title>兰州料理菜单管理</title>
     <style></style>
     <script>
+        if(window.localStorage){
+            console.log('Support localStorage!!!');
+        }
         function addMenu() {
             //输入菜品信息对话框
             var menu = window.prompt('菜品信息');
