--- a/Instance001/kitty/my.html
+++ b/Instance001/kitty/my.html
@@ -36,7 +36,7 @@
 			</nav>
 			<span class="target"></span>
 			<div class="panel-box">
-				<table class="caidan" cellspacing="0">
+				<table class="caidan" id="caidanTable" cellspacing="0">
 				<thead>
 					<tr>
 						<td>序号</td>
@@ -47,40 +47,34 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td>1 <input type="checkbox"></td>
+						<td>1 <input type="checkbox" name="checkbox"></td>
 						<td>水煮肉</td>
 						<td><img src="img/1.jpg"></td>
 						<td>￥36.00元</td>
 					</tr>
 					<tr>
-						<td>2 <input type="checkbox"></td>
+						<td>2 <input type="checkbox" name="checkbox"></td>
 						<td>鱼香肉丝</td>
 						<td><img src="img/2.jpg"></td>
 						<td>￥38.00元</td>
 					</tr>
 					<tr>
-					    <td>3 <input type="checkbox"></td>
+					    <td>3 <input type="checkbox" name="checkbox"></td>
 						<td>四川干煎鸡</td>
 						<td><img src="img/3.jpg"></td>
 						<td>￥28.00元</td>
 					</tr>
 					<tr>
-						<td>4 <input type="checkbox"></td>
+						<td>4 <input type="checkbox" name="checkbox"></td>
 						<td>麻婆豆腐</td>
 						<td><img src="img/4.jpg"></td>
 						<td>￥18.00元</td>
-					</tr>
-					<tr>
-						<td>5 <input type="checkbox"></td>
-						<td>川菜酸菜鱼</td>
-						<td><img src="img/5.jpg"></td>
-						<td>￥88.00元</td>
 					</tr>
 				</tbody>
 			</table>
 			<div class="caidan-btn">
 				<button class="add-caidan" style="margin-right: 30px;" onclick="show()">添加菜单</button>
-				<button class="dele-caidan">删除菜单</button>
+				<button class="dele-caidan" onclick="delTableRow()">删除菜单</button>
 			</div>
 			</div>
 			
@@ -99,32 +93,42 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td><input type="text"></td>
-						<td><input type="text"></td>
-						<td><input type="text"></td>
-						<td><input type="text"></td>
+						<td><input type="text" id="xuhao" value=""></td>
+						<td><input type="text" id="cainame" value=""></td>
+						<td><input type="text" id="caipic" value=""></td>
+						<td><input type="text" id="caivalu" value=""></td>
 					</tr>
 				</tbody>
 			</table>
-			<button class="dele-caidan" style="float: right; margin-right: 50px; margin-bottom: 30px;">确定</button>
+			<button id="sure" class="dele-caidan" style="float: right; margin-right: 50px; margin-bottom: 30px;">确定</button>
 		</div>
 		<script type="text/javascript">
 			function show(){
 				$("#anotherDiv_back").toggle();
 				$("#anotherDiv").toggle();
 			}
+			$(document).ready(function(){
+				$("#sure").click(function(){
+					var xuhao= document.getElementById("xuhao").value;
+					var cainame= document.getElementById("cainame").value;
+					var caipic= document.getElementById("caipic").value;
+					var caivalu= document.getElementById("caivalu").value;
+					var html = "<tr><td>"+xuhao+" <input type='checkbox' name='checkbox'></td><td>"+cainame+"</td><td>"+caipic+"</td><td>"+caivalu+"</td></tr>";
+					$("#caidanTable tbody").append(html);
+			        $("#anotherDiv_back").hide();
+					$("#anotherDiv").hide();
+				});
+			});
+			function delTableRow(){
+			    var boxes = document.getElementsByName("checkbox");
+			    for(i=0;i<boxes.length;i++){
+			        if(boxes[i].checked){
+			            tr = boxes[i].parentNode.parentNode;
+			            tr.parentNode.removeChild(tr);
+			        }
+			    }
+			}
         </script>
-		<!--<script type="text/javascript">
-            function myFunction(){ 
-		        var x;
-				var dish=prompt("请输入菜的名字","");
-				var valu=prompt("请输入菜的价格","");
-				$(".add-caidan").click(function(){
-				$(".caidan tbody tr").append(" <tr><td>5</td><td>dish</td><td></td><td>valu</td></tr>");
-		         });
-            };
-		</script>-->
-		
 		<script>
 			"use strict";
 			(function() {
