--- a/Instance001/kitty/my.html
+++ b/Instance001/kitty/my.html
@@ -6,7 +6,35 @@
 		<title>四川料理菜单管理</title>
 		<link rel="stylesheet" href="css/main.css" />
 		<script src="js/jquery-1.11.1.min.js"></script>
-
+        <script src="js/jquery.fly.min.js"></script>
+        <script>
+			$(function() {
+				var offset = $("#end").offset();  //结束的地方的元素
+				$(".addcar").click(function(event){   //是$(".addcar")这个元素点击促发的 开始动画的位置就是这个元素的位置为起点
+					var addcar = $(this);
+					var img = addcar.parent().parent().find('img').attr('src');
+					var flyer = $('<img class="u-flyer" src="'+img+'">');
+					flyer.fly({
+						start: {
+							left: event.pageX,
+							top: event.pageY
+						},
+						end: {
+							left: offset.left+10,
+							top: offset.top+10,
+							width: 0,
+							height: 0
+						},
+						onEnd: function(){
+							$("#msg").show().animate({width: '250px'}, 200).fadeOut(1000);
+							addcar.css("cursor","default").removeClass('orange').unbind('click');
+							this.destory();
+						}
+					});
+				});
+			  
+			});
+			</script>
 	</head>
 
 	<body>
@@ -45,6 +73,9 @@
 							<td>菜名称</td>
 							<td>菜图片</td>
 							<td>菜价格（元）</td>
+							<td>数量</td>
+							<td>小计</td>
+							<td>操作</td>
 						</tr>
 					</thead>
 					<tbody>
@@ -53,35 +84,62 @@
 							<td>水煮肉</td>
 							<td><img src="img/1.jpg"></td>
 							<td>￥36.00</td>
+							<td class="count"><span class="reduce"></span>
+								<input class="count-input" type="text" value="1" />
+								<span class="add">+</span></td>
+							<td class="subtotal">￥36.00</td>
+							<td><button class="add-caidan addcar">下单</button></td>
 						</tr>
 						<tr>
 							<td>2 <input type="checkbox" name="checkbox"></td>
 							<td>鱼香肉丝</td>
 							<td><img src="img/2.jpg"></td>
 							<td>￥38.00</td>
+							<td class="count"><span class="reduce"></span>
+								<input class="count-input" type="text" value="1" />
+								<span class="add">+</span></td>
+							<td class="subtotal">￥38.00</td>
+							<td><button class="add-caidan addcar">下单</button></td>
 						</tr>
 						<tr>
 							<td>3 <input type="checkbox" name="checkbox"></td>
 							<td>四川干煎鸡</td>
 							<td><img src="img/3.jpg"></td>
 							<td>￥28.00</td>
+							<td class="count"><span class="reduce"></span>
+								<input class="count-input" type="text" value="1" />
+								<span class="add">+</span></td>
+							<td class="subtotal">￥28.00</td>
+							<td><button class="add-caidan addcar">下单</button></td>
 						</tr>
 						<tr>
 							<td>4 <input type="checkbox" name="checkbox"></td>
 							<td>麻婆豆腐</td>
 							<td><img src="img/4.jpg"></td>
 							<td>￥18.00</td>
+							<td class="count"><span class="reduce"></span>
+								<input class="count-input" type="text" value="1" />
+								<span class="add">+</span></td>
+							<td class="subtotal">￥18.00</td>
+							<td><button class="add-caidan addcar">下单</button></td>
 						</tr>
+
 					</tbody>
 				</table>
-				<div class="caidan-btn">
+				<div class="caidan-btn clearfix">
+					<span style="margin-right: 50px;">您已定8个菜</span>
+					<span style="">总计：￥45.3</span>
+				</div>
+				<div class="caidan-btn clearfix">
 					<div style="float: left;"><input type="checkbox" id="checkAll"> 全选</div>
-					<button class="add-caidan" style="margin-right: 30px;" onclick="show()">添加菜单</button>
-					<button class="dele-caidan" id="dele-caidan">删除菜单</button>
+					<button class="add-caidan" style="margin-right: 30px; background-color: #FFD700;" onclick="show()">添加菜品</button>
+					<button class="dele-caidan" style="margin-right: 30px; background-color: #FFD700;" id="dele-caidan">删除菜品</button>
+					<button class="dele-caidan" id="end" style="background-color: #FFD700;">查看菜单</button>
 				</div>
 			</div>
 
 		</div>
+		<div id="msg">已成功加入购物车！</div>
 		<div class="tck-back" id="anotherDiv_back" style="display: none;"></div>
 		<div class="tck-box" id="anotherDiv" style="display: none;">
 			<div class="tck-close">
@@ -137,7 +195,7 @@
 					var cainame = $("#cainame").val();
 					var caipic = $("#caipic").val();
 					var caivalu = $("#caivalu").val();
-					var html = "<tr><td>" + xuhao + " <input type='checkbox' name='checkbox'></td><td>" + cainame + "</td><td>" + caipic + "</td><td>" + caivalu + "</td></tr>";
+					var html = "<tr><td>" + xuhao + " <input type='checkbox' name='checkbox'></td><td>" + cainame + "</td><td>" + caipic + "</td><td>" + caivalu + "</td><td class='count'><span class='reduce'></span><input class='count-input' type='text' value='1'/><span class='add'>+</span></td><td class='subtotal'>" + caivalu + "</td><td><button class='add-caidan'>下单</button></td></tr>";
 					if(xuhao == null || xuhao == undefined || xuhao == "") {
 						alert('不能为空!');
 						return false;
@@ -146,6 +204,7 @@
 						$("#anotherDiv_back").hide();
 						$("#anotherDiv").hide();
 					}
+
 				});
 			});
 			$(function() {
